[main_svc] Форматирование EventToUpdateDto